--- a/JavaScript/lesson-38/package.json
+++ b/JavaScript/lesson-38/package.json
@@ -1,10 +1,14 @@
 {
+	"dependencies": {
+		"@bloomberg/record-tuple-polyfill": "^0.0.4"
+	},
 	"devDependencies": {
 		"@babel/core": "^7.22.9",
 		"@babel/plugin-proposal-record-and-tuple": "^7.22.5",
 		"@babel/preset-env": "^7.22.9",
 		"babel-loader": "^9.1.3",
 		"css-loader": "^6.8.1",
+		"eslint": "^8.45.0",
 		"eslint-webpack-plugin": "^4.0.1",
 		"html-webpack-plugin": "^5.5.3",
 		"sass": "^1.64.1",
@@ -23,9 +27,6 @@
 		"dev": "webpack --mode development",
 		"start": "webpack serve --mode development"
 	},
-	"author": "",
-	"license": "MIT",
-	"dependencies": {
-		"@bloomberg/record-tuple-polyfill": "^0.0.4"
-	}
+	"author": "Aykhan Huseynli",
+	"license": "MIT"
 }
